--- a/public/ZJZS/index.html
+++ b/public/ZJZS/index.html
@@ -358,8 +358,8 @@
                   <article class="post-next col-6">
                     
                     
-                      <a href="/IE/" title="强制打开IE浏览器">
-                        <span class="hidden-mobile">强制打开IE浏览器</span>
+                      <a href="/IE/" title="打开IE浏览器">
+                        <span class="hidden-mobile">打开IE浏览器</span>
                         <span class="visible-mobile">下一篇</span>
                         <i class="iconfont icon-arrowright"></i>
                       </a>
